# WebImport

./: .gitignore  README.md  pyproject.toml  setup.py  webimport.py
webimport/: __init__.py  server.py  webimport.py
